--- a/contact-page.html
+++ b/contact-page.html
@@ -40,24 +40,24 @@
     
             <input type="submit" name="" id="">
         </form>
-        <img class="left-tree" src="https://cdn-icons-png.flaticon.com/512/490/490091.png" alt="tree image">
-        <img class="right-tree" src="https://cdn-icons-png.flaticon.com/512/490/490091.png" alt="tree image">
+        <img class="left-tree" src="images/tree.png" alt="tree image">
+        <img class="right-tree" src="images/tree.png" alt="tree image">
         
-        <img class="grass-left-a" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-        <img class="grass-left-b" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-        <img class="grass-left-c" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-        <img class="grass-right-a" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-        <img class="grass-right-b" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-        <img class="grass-right-c" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
+        <img class="grass-left-a" src="images/grass.webp" alt="grass image">
+        <img class="grass-left-b" src="images/grass.webp" alt="grass image">
+        <img class="grass-left-c" src="images/grass.webp" alt="grass image">
+        <img class="grass-right-a" src="images/grass.webp" alt="grass image">
+        <img class="grass-right-b" src="images/grass.webp" alt="grass image">
+        <img class="grass-right-c" src="images/grass.webp" alt="grass image">
         </div>
 
         <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/thomasgadd007/" target="_blank">
-                <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/128/1384/1384088.png" alt="LinkedIn"></a>
+                <img class="footer-image-link" src="images/linkedin-icon.png" alt="LinkedIn"></a>
             <a class="footer-link" href="https://www.instagram.com/tom_gadd_/" target="_blank">
-                <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/512/1077/1077042.png" alt="Instagram"></a>
+                <img class="footer-image-link" src="images/insta-icon.png" alt="Instagram"></a>
             <a class="footer-link" href="https://twitter.com/Tom_Gadd_" target="_blank">
-                <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="Twitter"></a>
+                <img class="footer-image-link" src="images/twitter-icon.png" alt="Twitter"></a>
             <p class="copyright">© Thomas Gadd @ The University of Surrey</p>
         </div>
     </body>
