--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="profile">
           <img class="profile-photo" src="images/profile-photo.png" alt="profile photo">
           <h2>Hello.</h2>
-          <p class="intro">Welcome to the personal website of Thomas Gadd. This website has 
-            been constructed using HTML and CSS.</p>
+          <p class="intro">Welcome to the personal website of Thomas Gadd, constructed
+            using only HTML and CSS.</p>
         </div>
 
         <hr>
@@ -37,45 +37,55 @@
         <div class="education">
           <h2>Education.</h2>
           <div class="education-row">
-            <img class="computer-image" src="https://cdn-icons-png.flaticon.com/512/2997/2997322.png" alt="sample image">
-            <h3><a href="education.html">Msc Digital Marketing and Channel Management</a></h3>
-            <p class="computer-description">From 2022-24 I've been back at the University of Surrey working on a Masters in Digital Marketing.
+            <img class="msc-image" src="images/msc-icon.png" alt="msc image">
+            <h3><a href="education.html">MSc Digital Marketing and Channel Management</a></h3>
+            <p class="msc-description">From 2022-24 I've been back at the University of Surrey working on a Masters in Digital Marketing.
                 Now back in person I found myself increasingly taking a leadership role in team projects. Adjusting 
-                to the new hybrid way of working to manage a combination of meetings in virtual environments and in person.</p>
+                to the new hybrid way of working to manage a combination of meetings in virtual environments and in person. In my final year
+            I focused on marketing, building the foundation of knowledge I would build upon during my Masters.</p>
           </div>
           <div class="education-row">
-            <img class="chilli-img" src="https://cdn-icons-png.flaticon.com/512/1946/1946785.png" alt="chillies-img">
+            <img class="bsc-img" src="images/bsc-icon.png" alt="bsc-imgage">
             <h3><a href="education.html">BSc Business Management (Marketing)</a></h3>
-            <p class="chilli-description">From 2018-21 I called the University of Surrey home, moving to Guildford from a
+            <p class="bsc-description">From 2018-21 I called the University of Surrey home, moving to Guildford from a
                 semi-rural village. I completed a varity of modules, ranging from organisational behaviour and human resource
                 management, accounting and finance, sustainability and innovation and most importantly, marketing. </p>
+          </div>
+          <h2>Skills</h2>
+          <div class="education-row">
+            <img class="skills-icon" src="images/skills-icon.png" alt="skill icon">
+            <h3>Skills</h3>
+            <p class="skills-description">During my time at University I've developed and polished my skills in digital marketing, and further
+            complementary knowledge including analytics and marketing research. In addition to marketing knowledge I have now begun my coding journey. It started with a basic site using just HTML,
+            which can be visited here. Once published I started work on the second site, the one you're reading now. Taking the basic
+            HTML site and adding some CSS to make it less painful on the eyes.
+          </p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3></h3>
-          <p class="contact-message">Like what you see? Follow the links below to stay in touch.</p>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <p class="contact-message">There's so much more to see, stay up-to-date and don't miss out.</p>
+          <a class="btn" href="mailto:tg00388@surrey.ac.uk">CONTACT ME</a>
         </div>
-    <img class="left-tree" src="https://cdn-icons-png.flaticon.com/512/490/490091.png" alt="tree image">
-    <img class="right-tree" src="https://cdn-icons-png.flaticon.com/512/490/490091.png" alt="tree image">
+    <img class="left-tree" src="images/tree.png" alt="tree image">
+    <img class="right-tree" src="images/tree.png" alt="tree image">
     
-    <img class="grass-left-a" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-    <img class="grass-left-b" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-    <img class="grass-left-c" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-    <img class="grass-right-a" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-    <img class="grass-right-b" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-    <img class="grass-right-c" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
+    <img class="grass-left-a" src="images/grass.webp" alt="grass image">
+    <img class="grass-left-b" src="images/grass.webp" alt="grass image">
+    <img class="grass-left-c" src="images/grass.webp" alt="grass image">
+    <img class="grass-right-a" src="images/grass.webp" alt="grass image">
+    <img class="grass-right-b" src="images/grass.webp" alt="grass image">
+    <img class="grass-right-c" src="images/grass.webp" alt="grass image">
     </div>
     
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/thomasgadd007/" target="_blank">
-            <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/128/1384/1384088.png" alt="LinkedIn"></a>
+            <img class="footer-image-link" src="images/linkedin-icon.png" alt="LinkedIn"></a>
         <a class="footer-link" href="https://www.instagram.com/tom_gadd_/" target="_blank">
-            <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/512/1077/1077042.png" alt="Instagram"></a>
+            <img class="footer-image-link" src="images/insta-icon.png" alt="Instagram"></a>
         <a class="footer-link" href="https://twitter.com/Tom_Gadd_" target="_blank">
-            <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="Twitter"></a>
+            <img class="footer-image-link" src="images/twitter-icon.png" alt="Twitter"></a>
         <p class="copyright">© Thomas Gadd @ The University of Surrey</p>
     </div>
     </body>
