--- a/education.html
+++ b/education.html
@@ -21,46 +21,61 @@
             <img class="top-cloud" src="images/cloud.png" alt="cloud image">
             <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
         </div>
+
         <div class="middle-container">
-            <div style="margin-top: 0;" class="education">
-                <h2 style="margin-top: 0;">Education.</h2>
-                <div class="education-row">
-                  <img class="computer-image" src="https://cdn-icons-png.flaticon.com/512/2997/2997322.png" alt="sample image">
-                  <h3><a href="education.html">Msc Digital Marketing and Channel Management</a></h3>
-                  <p class="computer-description">From 2022-24 I've been back at the University of Surrey working on a Masters in Digital Marketing.
-                      Now back in person I found myself increasingly taking a leadership role in team projects. Adjusting 
-                      to the new hybrid way of working to manage a combination of meetings in virtual environments and in person.</p>
-                </div>
-                <div class="education-row">
-                  <img class="chilli-img" src="https://cdn-icons-png.flaticon.com/512/1946/1946785.png" alt="chillies-img">
-                  <h3><a href="education.html">BSc Business Management (Marketing)</a></h3>
-                  <p style="padding-bottom: 250px;" class="chilli-description">From 2018 to 2021 I called Guildford and the University of Surrey home while embarking on my 
-                    bachelors degree. Through three years and a pandemic I completed a range of modules with focus varying from organisational 
-                    behaviour and human resource management, accounting and finance, sustainability and innovation through to marketing.
-                    During my time at Surrey I saw a transformation in my personal, academic and professional life, leaving with life long friends
-                    from across the country and world, skills and knowledge I couldn't have dreamt of before, and a new understanding
-                    of the professional world. Listed below are some of the modules completed during this time.</p>
-                </div>
+
+            <div class="education">
+              <h2 style="margin-top: 15px;">Education.</h2>
+              <div class="education-row">
+                <img class="msc-image" src="images/msc-icon.png" alt="msc image">
+                <h3><a href="education.html">MSc Digital Marketing and Channel Management</a></h3>
+                <p class="msc-description">From 2022-24 I've been back at the University of Surrey working on a Masters in Digital Marketing.
+                    Now back in person I found myself increasingly taking a leadership role in team projects. Adjusting 
+                    to the new hybrid way of working to manage a combination of meetings in virtual environments and in person. In my final year
+                I focused on marketing, building the foundation of knowledge I would build upon during my Masters.</p>
+              </div>
+              <div class="education-row">
+                <img class="bsc-img" src="images/bsc-icon.png" alt="bsc-imgage">
+                <h3><a href="education.html">BSc Business Management (Marketing)</a></h3>
+                <p class="bsc-description">From 2018-21 I called the University of Surrey home, moving to Guildford from a
+                    semi-rural village. I completed a varity of modules, ranging from organisational behaviour and human resource
+                    management, accounting and finance, sustainability and innovation and most importantly, marketing. </p>
+              </div>
+              <h2>Skills</h2>
+              <div class="education-row">
+                <img class="skills-icon" src="images/skills-icon.png" alt="skill icon">
+                <h3>Skills</h3>
+                <p class="skills-description">During my time at University I've developed and polished my skills in digital marketing, and further
+                complementary knowledge including analytics and marketing research. In addition to marketing knowledge I have now begun my coding journey. It started with a basic site using just HTML,
+                which can be visited here. Once published I started work on the second site, the one you're reading now. Taking the basic
+                HTML site and adding some CSS to make it less painful on the eyes. 
+              </p>
+              </div>
             </div>
-            <hr class="education-hr">
-            <img class="left-tree" src="https://cdn-icons-png.flaticon.com/512/490/490091.png" alt="tree image">
-            <img class="right-tree" src="https://cdn-icons-png.flaticon.com/512/490/490091.png" alt="tree image">
-            
-            <img class="grass-left-a" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-            <img class="grass-left-b" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-            <img class="grass-left-c" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-            <img class="grass-right-a" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-            <img class="grass-right-b" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
-            <img class="grass-right-c" src="https://media2.giphy.com/media/hTIwZmhGSNRRcGMZsd/200w.webp?cid=ecf05e4747rfo58x46whtev0xnotqtcaxoz50kolp1j7m19f&rid=200w.webp&ct=s" alt="grass image">
+            <hr>
+            <div class="contact-me">
+              <h2>Get In Touch</h2>
+              <p class="contact-message">There's so much more to see, stay up-to-date and don't miss out.</p>
+              <a class="btn" href="mailto:tg00388@surrey.ac.uk">CONTACT ME</a>
+            </div>
+        <img class="left-tree" src="images/tree.png" alt="tree image">
+        <img class="right-tree" src="images/tree.png" alt="tree image">
+        
+        <img class="grass-left-a" src="images/grass.webp" alt="grass image">
+        <img class="grass-left-b" src="images/grass.webp" alt="grass image">
+        <img class="grass-left-c" src="images/grass.webp" alt="grass image">
+        <img class="grass-right-a" src="images/grass.webp" alt="grass image">
+        <img class="grass-right-b" src="images/grass.webp" alt="grass image">
+        <img class="grass-right-c" src="images/grass.webp" alt="grass image">
         </div>
 
         <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/thomasgadd007/" target="_blank">
-                <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/128/1384/1384088.png" alt="LinkedIn"></a>
+                <img class="footer-image-link" src="images/linkedin-icon.png" alt="LinkedIn"></a>
             <a class="footer-link" href="https://www.instagram.com/tom_gadd_/" target="_blank">
-                <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/512/1077/1077042.png" alt="Instagram"></a>
+                <img class="footer-image-link" src="images/insta-icon.png" alt="Instagram"></a>
             <a class="footer-link" href="https://twitter.com/Tom_Gadd_" target="_blank">
-                <img class="footer-image-link" src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="Twitter"></a>
+                <img class="footer-image-link" src="images/twitter-icon.png" alt="Twitter"></a>
             <p class="copyright">© Thomas Gadd @ The University of Surrey</p>
         </div>
     </body>
