--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>Skills</h3>
             <p class="skills-description">During my time at University I've developed and polished my skills in digital marketing, and further
             complementary knowledge including analytics and marketing research. In addition to marketing knowledge I have now begun my coding journey. It started with a basic site using just HTML,
-            which can be visited <a style="margin: 0;" href="https://thomas-gadd.github.io/html-cv/" target="_blank">here.</a> Once published I started work on the second site, the one you're reading now. Taking the basic
+            which can be visited <!--<a style="margin: 0;" href="https://thomas-gadd.github.io/html-cv/" target="_blank">here.</a>--> Once published I started work on the second site, the one you're reading now. Taking the basic
             HTML site and adding some CSS to make it less painful on the eyes.
           </p>
           </div>
