--- a/education.html
+++ b/education.html
@@ -32,14 +32,18 @@
                 <p class="msc-description">From 2022-24 I've been back at the University of Surrey working on a Masters in Digital Marketing.
                     Now back in person I found myself increasingly taking a leadership role in team projects. Adjusting 
                     to the new hybrid way of working to manage a combination of meetings in virtual environments and in person. In my final year
-                I focused on marketing, building the foundation of knowledge I would build upon during my Masters.</p>
+                    I focused on marketing, building the foundation of knowledge I would build upon during my Masters. Here I furthered my networking, attending 
+                    industry events and guest lectures, using similation software for paid search ads, and working with a local company to establish best practices
+                    for digital marketing.</p>
               </div>
               <div class="education-row">
                 <img class="bsc-img" src="images/bsc-icon.png" alt="bsc-imgage">
                 <h3><a href="education.html">BSc Business Management (Marketing)</a></h3>
                 <p class="bsc-description">From 2018-21 I called the University of Surrey home, moving to Guildford from a
                     semi-rural village. I completed a varity of modules, ranging from organisational behaviour and human resource
-                    management, accounting and finance, sustainability and innovation and most importantly, marketing. </p>
+                    management, accounting and finance, sustainability and innovation and most importantly, marketing. This course has not just allowed 
+                    me to greatly enhance my marketing abillities, but has allowed me to work alongside and network with individuals with varied 
+                    backgrounds and gain hands on experience.</p>
               </div>
               <h2>Skills</h2>
               <div class="education-row">
